Fix popover arrow gap

--- a/dispatch/static/manager/src/styles/components/_content_editor.scss
+++ b/dispatch/static/manager/src/styles/components/_content_editor.scss
@@ -110,6 +110,11 @@
   margin-left: 0.5rem;
 }
 
+.pt-popover-arrow svg {
+  // Structure
+  margin-top: -1px;
+}
+
 // Entities
 
 .c-content-editor__entity--link {
